# recycle-bin

./: .gitmodules  create_project.sh
thestuff/ansi-c/: README.md
thestuff/ansi-c/1/10/: detab.c  (+1 more)
thestuff/binary_search_tree/: README.md  makefile
thestuff/binary_search_tree/src/: BinarySearchTree.h  main.cpp
thestuff/bitmap/: .gitignore  README.md  bitmap.h  main.cpp
thestuff/bootloader/: README.md  boot.asm  justfile
thestuff/byol/: .gitignore  Makefile.am  configure.ac
thestuff/byol/src/: blip.c  config.h
thestuff/deck_of_cards/: README.md  card_counting_trainer.py  deck_of_cards.py
thestuff/line_intersect_test/: README.md  multiplayer_snake.py  vec.py
thestuff/math_parser/: README.md  math_parser.py
thestuff/math_parser_hs/: CHANGELOG.md  math-parser-hs.cabal
thestuff/math_parser_hs/app/: Lexer.hs  Main.hs
thestuff/memo_trainer/: README.md  dashboard.html  memo.py
thestuff/multiplayer_snake/: README.md  multiplayer_snake.py
thestuff/nested_parentheses/: README.md  nested_parentheses.py
thestuff/nix_pills/: README.md  autotools.nix  default.nix  foo.str  graphviz.nix  hello.nix  lib.nix  simple.c  simple.nix
thestuff/parser-combinator-js/: README.md  justfile  main.ts
thestuff/sudoku/: presets.lsp  sudoku.lsp  test.lsp
thestuff/sushi_rice_calculator/: README.md  calc.py
thestuff/tiny_renderer/: README.md  makefile
thestuff/tiny_renderer/src/: bitmap.h  main.cpp  model.h  renderer.h
thestuff/turing_complete_as_challenges/: .gitignore  README.md  flake.nix  justfile  test.s
thestuff/vector_intersection/: README.md  vec.py
(+19 files in other folders)
